--- a/login.html
+++ b/login.html
@@ -7,43 +7,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="d-flex flex-row justify-content-around">
-       <div class="card mt-4" style="width: 15rem;">
+    <div class="d-flex flex-row justify-content-center">
+        <div class="card mt-4" style="width: 15rem;">
             <div class="card-header">
-            <h5>Registrati</h5>
+            <h5>Accedi</h5>
             </div>
             <div class="card-body">
-            <h5 class="card-title">Registrati adesso</h5>
+            <h5 class="card-title">Accedi adesso</h5>
             <form >
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome"><br>
-                <label for="cognome">Cognome:</label>
-                <input type="text" id="cognome"><br>
                 <label for="username">Username:</label>
                 <input type="text" id="username"><br>
                 <label for="password">Password:</label>
                 <input type="password">
             </form> 
-            <br><a href="#" class="btn btn-primary">Registrati</a>
-            </div>
-      </div>
-      <div class="card mt-4" style="width: 15rem;">
-        <div class="card-header">
-        <h5>Accedi</h5>
+            <br><a href="#" class="btn btn-success">Accedi</a>
         </div>
-        <div class="card-body">
-        <h5 class="card-title">Se hai già un account accedi adesso</h5>
-        <form >
-            <label for="username">Username:</label>
-            <input type="text" id="username"><br>
-            <label for="password">Password:</label>
-            <input type="password">
-        </form> 
-        <br><a href="#" class="btn btn-success">Registrati</a>
-        </div>
-  </div>
     </div>
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
