--- a/login.html
+++ b/login.html
@@ -16,13 +16,30 @@
             <h5 class="card-title">Accedi adesso</h5>
             <form >
                 <label for="username">Username:</label>
-                <input type="text" id="username"><br>
+                <input type="text" id="username_login"><br>
                 <label for="password">Password:</label>
-                <input type="password">
+                <input type="password" id="password">
             </form> 
-            <br><a href="#" class="btn btn-success">Accedi</a>
+            <br><a href="#" class="btn btn-success" onclick="login()">Accedi</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+         async function login(){
+            const username_login = document.getElementById("username_login").value
+            const password= document.getElementById("password").value
+
+            const request = await fetch(`http://localhost:8000/api/user/${username_login}`)
+            const risposta = await request.json();
+
+            console.log(risposta)
+
+            if (risposta.username == username_login && risposta.password== password){
+                localStorage.setItem('username', username_login)
+                //spostami sulla pagina X
+                window.location.href = 'home.html'
+            }
+         }
+    </script>
 </body>
 </html>
