--- a/home.html
+++ b/home.html
@@ -3,9 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 </head>
 <body>
-    
+    <header>
+        <div>
+            <nav class="navbar bg-light">
+                <div class="container-fluid">
+                    <div class="dropdown">
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Crea post
+                        </button>
+                        <ul class="dropdown-menu">
+                            <label for="contenuto">Contenuto:</label>
+                            <input type="text" id="contenuto"><br><br>
+                            <button type="button" class="btn btn-success" onclick="crea_post()">Carica post</button>
+                        </ul>
+                      </div>
+                  <a class="navbar-brand"></a>
+                  <div class="d-flex">
+                        <input class="form-control me-2"  placeholder="Cerca post"  id="nome">
+                        <button class="btn btn-outline-success" onclick="cerca_post()">Cerca</button>
+                  </div>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="d-flex flex-row justify-content-center">
+            <h1 class="mb-4">Benvenuto <span id="valore_localstorage"></span>!</h1>
+        </div>
+        <div id="lista_post" style="display: flex; flex-direction: column; align-items: center;">
+
+        </div>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        const username = localStorage.getItem("username")
+        document.getElementById("valore_localstorage").innerHTML = username
+        async function carica_post() {
+            const request = await fetch("http://localhost:8000/api/home")
+            const risposta = await request.json()
+
+            console.log(risposta)
+
+            document.getElementById("lista_post").innerHTML = ""
+
+            for (let i = 0; i < risposta.length; i++) {
+                document.getElementById("lista_post").innerHTML += `
+                <div class="card" style="width:20rem">
+                    <div class="card-header">
+                        <h5>${risposta[i].username}</h5>
+                    </div>
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0">
+                        <p>${risposta[i].contenuto}</p>
+                        </blockquote>
+                    </div>
+                </div><br>
+            `}
+        }
+        async function crea_post() {
+            const contenuto= document.getElementById("contenuto").value
+
+            const request = await fetch(`http://localhost:8000/api/create_post/${username}`, {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    contenuto: contenuto,
+                })
+            })
+            const risposta = await request.json()
+            carica_post()
+        }
+        async function cerca_post() {
+            document.getElementById("lista_post").innerHTML=""
+            const nome= document.getElementById("nome").value
+            const request = await fetch(`http://localhost:8000/api/posts/${nome}`)
+            const risposta = await request.json()
+            document.getElementById("lista_post").innerHTML = ""
+
+            for (let i = 0; i < risposta.length; i++) {
+                document.getElementById("lista_post").innerHTML += `
+                <div class="card" style="width:20rem">
+                    <div class="card-header">
+                        <h5>${risposta[i].username}</h5>
+                    </div>
+                    <div class="card-body">
+                        <blockquote class="blockquote mb-0">
+                        <p>${risposta[i].contenuto}</p>
+                        </blockquote>
+                    </div>
+                </div><br>
+            `}
+        }
+
+        carica_post()
+    </script>
 </body>
 </html>
